# machine_stop

./: .gitignore  LICENSE.md  README.md  pyproject.toml  requirements.txt
astarte_dw/: README.md  dbt_project.yml
astarte_dw/models/marts/maintenance/: dmm_dim_dates.sql  dmm_dim_incidents.sql  dmm_dim_machines.sql  dmm_fact_maintenances.sql
astarte_dw/models/staging/: schema.yml  source.yml  stg_incidents.sql  stg_machines.sql  stg_maintenances.sql  stg_operators.sql
astarte_dw/models/warehouse/: dim_dates.sql  dim_incidents.sql  dim_machines.sql  dim_operators.sql  fact_maintenances.sql
data/: incidents.csv  machine.csv  maintenance.csv  operators.csv
data/raw/: incidents.csv  machines.csv  maintenances.csv  operators.csv
doc/: source_to_target.xlsx
notebooks/: analise.ipynb
scr/: data_ingestion.py  generate_data.py  ingest_data.py
src/: create_tables.sql  ingest_data.py
