[project]
name = "machine-stop"
version = "0.1.0"
description = "End-to-end Data Warehouse project"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "dbt-core>=1.9.3",
    "dbt-postgres>=1.9.0",
    "faker>=37.0.1",
    "numpy>=1.26.4",
    "pandas>=2.2.3",
    "psycopg2>=2.9.10",
]
